...
    return Row(
      children: [
        NavigationRail(
          destinations: const [
            NavigationRailDestination(
              icon: Icon(Icons.home),
              label: Text("Home"),
            ),
            NavigationRailDestination(
              icon: Icon(Icons.favorite),
              label: Text("Favorites"),
            ),
          ],
          selectedIndex: selectedPageIndex.index,
          extended: constraints.maxWidth >= 600,
          onDestinationSelected: (value) {
            setState(() {
...
