...

  ElevatedButton _buildGetNextButton(BuildContext context) => ElevatedButton(
      onPressed: () {
        context.read<RandomWordBloc>().add(GetNewWord());
        listKey.currentState?.insertItem(0);
      },
      child: const Text("Next"));

  Widget _buildFavoriteButton() =>
      BlocBuilder<RandomWordBloc, RandomWordState>(builder: (context, state) {
        return FavoriteButton(
            isFavorite: state.current.isFavorite,
            onPress: () {
...
